# rock-paper-scissors

./: .gitignore  README.md  docker-compose.yml
RPS/: Dockerfile  pyproject.toml
RPS/RPS/: settings.py  urls.py
RPS/RPS/utils/: misc.py
RPS/games/: data_initialisers.py  enums.py  models.py  serializers.py  urls.py  views.py
RPS/games/migrations/: 0001_initial.py  0002_game_status.py  0003_alter_game_status.py  0004_turn.py  0005_remove_player_score_player_draws_player_hand_and_more.py  0006_alter_turn_game.py
RPS/games/services/: play.py  rules.py  validations.py
RPS/games/tests/: client.py  factories.py
RPS/games/tests/integration/endpoints/: test_game_create.py  test_game_join.py  test_game_patch.py  test_game_play.py
RPS/games/tests/integration/validation/: test_game_join.py  test_game_patch.py  test_game_play.py
